- compose multiplatform video player